--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="main_container">
           <header>Currency Converter</header>
-          <form action="#">
+          <form action="/">
                <div class="amount">
                    <p>Enter amount</p>
                    <input type="text" value="1" placeholder="Enter amount">
