flag change feature added

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                     <div class="from">
                         <p>From</p>
                         <div class="select-box">
-                               <img src="https://flagsapi.com/US/flat/64.png" alt="flag">
-                                <select></select>
+                               <img src="https://flagsapi.com/US/flat/64.png" id="from_img" alt="flag">
+                               <select id="fromimg"></select>
                         </div>
                     </div>
                     <i class="fa-solid fa-arrows-rotate"></i>
                     <div class="to">
                         <p>To</p>
                         <div class="select-box">
-                               <img src="https://flagsapi.com/US/flat/64.png" alt="flag">
-                                <select></select>
+                               <img src="https://flagsapi.com/IN/flat/64.png"  id="to_img" alt="flag">
+                                <select id="toimg"></select>
                         </div>
                     </div>
                 </div>
